--- a/Misc/NEWS.d/next/C_API/2025-10-10-09-58-57.gh-issue-139888.xCfJ3L.rst
+++ b/Misc/NEWS.d/next/C_API/2025-10-10-09-58-57.gh-issue-139888.xCfJ3L.rst
@@ -1,2 +1,2 @@
-The :c:func:`_PyTuple_Resize` function is now :term:`soft deprecated`, use
-the :ref:`PyTupleWriter API <pytuplewriter>` instead.
+Deprecate the :c:func:`_PyTuple_Resize` function: use the :ref:`PyTupleWriter
+API <pytuplewriter>` instead.
