Fix typo in 3.14 release notes
Fixes a typo in the 3.14 release notes: `whille` ->  `while`.

--- a/Doc/whatsnew/3.14.rst
+++ b/Doc/whatsnew/3.14.rst
@@ -532,7 +532,7 @@ Improved error messages
 
   .. code-block:: pycon
 
-     >>> whille True:
+     >>> while True:
      ...     pass
      Traceback (most recent call last):
        File "<stdin>", line 1
