--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-11-16-14-36.gh-issue-139549.9BGTLP.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-11-16-14-36.gh-issue-139549.9BGTLP.rst
@@ -1,1 +1,9 @@
-Fix a memory leak of a JIT executor that occurred when JIT compilation failed.
+Fix memory leak in JIT executor on compilation failure
+
+The executor object passed to the TIER1_TO_TIER2 macro was not
+decremented if the Tier 2 code returned with an exception set but
+without a fatal error (i.e., not returning NULL).
+
+This change moves the Py_DECREF call inside the TIER1_TO_TIER2
+macro to ensure the executor's reference count is always decremented
+after its execution, regardless of the outcome.
