--- a/Misc/NEWS.d/next/C_API/2025-10-10-09-54-28.gh-issue-139888.Z4Px61.rst
+++ b/Misc/NEWS.d/next/C_API/2025-10-10-09-54-28.gh-issue-139888.Z4Px61.rst
@@ -2,6 +2,8 @@ Add a :ref:`PyTupleWriter API <pytuplewriter>` to create :class:`tuple`:
 
 * :c:func:`PyTupleWriter_Create`
 * :c:func:`PyTupleWriter_Add`
+* :c:func:`PyTupleWriter_AddSteal`
+* :c:func:`PyTupleWriter_AddArray`
 * :c:func:`PyTupleWriter_Finish`
 * :c:func:`PyTupleWriter_Discard`
 
