--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -95,23 +95,33 @@ Key features include:
 * **Multiple output formats**: Generate both detailed statistics and flamegraph data
 * **Thread-aware profiling**: Option to profile all threads or just the main thread
 
-Profile process 1234 for 10 seconds with default settings::
+Profile process 1234 for 10 seconds with default settings:
+
+.. code-block:: shell
 
   python -m profiling.sampling 1234
 
-Profile with custom interval and duration, save to file::
+Profile with custom interval and duration, save to file:
+
+.. code-block:: shell
 
   python -m profiling.sampling -i 50 -d 30 -o profile.stats 1234
 
-Generate collapsed stacks for flamegraph::
+Generate collapsed stacks for flamegraph:
+
+.. code-block:: shell
 
   python -m profiling.sampling --collapsed 1234
 
-Profile all threads and sort by total time::
+Profile all threads and sort by total time:
+
+.. code-block:: shell
 
   python -m profiling.sampling -a --sort-tottime 1234
 
-The profiler generates statistical estimates of where time is spent::
+The profiler generates statistical estimates of where time is spent:
+
+.. code-block:: text
 
   Real-time sampling stats: Mean: 100261.5Hz (9.97µs) Min: 86333.4Hz (11.58µs) Max: 118807.2Hz (8.42µs) Samples: 400001
   Captured 498841 samples in 5.00 seconds
