--- a/Doc/whatsnew/2.3.rst
+++ b/Doc/whatsnew/2.3.rst
@@ -1864,10 +1864,8 @@ and bundle it with the source of your extension.
 
 .. seealso::
 
-   https://hg.python.org/cpython/file/default/Objects/obmalloc.c
-      For the full details of the pymalloc implementation, see the comments at
-      the top of the file :file:`Objects/obmalloc.c` in the Python source code.
-      The above link points to the file within the python.org SVN browser.
+   For the full details of the pymalloc implementation, see the comments at
+   the top of the :source:`Objects/obmalloc.c` file in the Python source code.
 
 .. ======================================================================
 
