--- a/Doc/whatsnew/2.6.rst
+++ b/Doc/whatsnew/2.6.rst
@@ -173,8 +173,7 @@ Hosting of the Python bug tracker is kindly provided by
 `Upfront Systems <https://upfrontsoftware.co.za>`__
 of Stellenbosch, South Africa.  Martin von Löwis put a
 lot of effort into importing existing bugs and patches from
-SourceForge; his scripts for this import operation are at
-``https://svn.python.org/view/tracker/importer/`` and may be useful to
+SourceForge; his scripts for this import operation may be useful to
 other projects wishing to move from SourceForge to Roundup.
 
 .. seealso::
@@ -187,9 +186,6 @@ other projects wishing to move from SourceForge to Roundup.
 
   https://roundup.sourceforge.io/
     Roundup downloads and documentation.
-
-  https://svn.python.org/view/tracker/importer/
-    Martin von Löwis's conversion scripts.
 
 New Documentation Format: reStructuredText Using Sphinx
 -----------------------------------------------------------
