Fix typo: s for plural

--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -390,7 +390,7 @@ locale
 ------
 
 * :func:`~locale.setlocale` now supports language codes with ``@``-modifiers.
-  ``@``-modifier are no longer silently removed in :func:`~locale.getlocale`,
+  ``@``-modifiers are no longer silently removed in :func:`~locale.getlocale`,
   but included in the language code.
   (Contributed by Serhiy Storchaka in :gh:`137729`.)
 
