Apply suggestions from code review
Co-authored-by: Peter Bierma <zintensitydev@gmail.com>

--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-14-20-18-31.gh-issue-140080.8ROjxW.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-14-20-18-31.gh-issue-140080.8ROjxW.rst
@@ -1,2 +1,1 @@
-Fix: ``atexit_callfuncs`` need to atexit_cleanup the state when copy is NULL
-to avoid the low memory error then recursive error.
+Fix hang during finalization when attempting to call :mod:`atexit` handlers under no memory.
