--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-15-01-30-28.gh-issue-140052.08spgX.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-15-01-30-28.gh-issue-140052.08spgX.rst
@@ -1,4 +1,2 @@
 Add :c:func:`PyTuple_MakeSingle` and :c:func:`PyTuple_MakePair` functions to
-create short-sized tuples.
-
-Patch by Sergey Miryanov.
+create short-sized tuples. Patch by Sergey Miryanov.
