--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-15-17-12-32.gh-issue-140149.cy1m3d.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-15-17-12-32.gh-issue-140149.cy1m3d.rst
@@ -1,2 +1,2 @@
 Speed up parsing bytes literals concatenation by using PyBytesWriter API and
-a single memory allocation (about 3x faster)
+a single memory allocation (about 3x faster).
