--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-16-15-02-11.gh-issue-139951.tqbIsW.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-16-15-02-11.gh-issue-139951.tqbIsW.rst
@@ -1,2 +1,2 @@
-Do not track immutable tuples in GC. Count only tracked objects in GC young
-objects counter. Patch by Sergey Miryanov and Mikhail Efimov
+Do not track immutable tuples in GC.
+Patch by Sergey Miryanov and Mikhail Efimov
