--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-17-23-58-11.gh-issue-140272.lhY8uS.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-17-23-58-11.gh-issue-140272.lhY8uS.rst
@@ -1,2 +1,1 @@
-Fix memory leak in :meth:`_gdbm.gdbm.clear` by properly freeing memory
-allocated by ``gdbm_firstkey()``.
+Fix memory leak in ``_gdbm.gdbm.clear`` by properly freeing memory allocated by ``gdbm_firstkey()``.
