--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-18-19-52-20.gh-issue-116738.NLJW0L.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-18-19-52-20.gh-issue-116738.NLJW0L.rst
@@ -1,2 +1,2 @@
-Make :mod:`_suggestions` thread-safe on the :term:`free threaded <free
+Make _suggestions module thread-safe on the :term:`free threaded <free
 threading>` build.
