--- a/Misc/NEWS.d/next/IDLE/2025-10-19-18-43-07.gh-issue-140334.3mdyHm.rst
+++ b/Misc/NEWS.d/next/IDLE/2025-10-19-18-43-07.gh-issue-140334.3mdyHm.rst
@@ -1,2 +1,2 @@
-Fixed syntax highlighting in IDLE where slashes at the end of lines aren't
-treated as line continuations
+Fixed syntax highlighting in :mod:`IDLE <idlelib>` where slashes at the end of lines aren't
+treated as line continuations.
