--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-20-11-24-36.gh-issue-140358.UQuKdV.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-20-11-24-36.gh-issue-140358.UQuKdV.rst
@@ -1,3 +1,3 @@
 Restore elapsed time and unreachable object count in GC debug output. These
-were inadvertently removed during a refactor of `gc.c`. The debug log now
+were inadvertently removed during a refactor of ``gc.c``. The debug log now
 again reports elapsed collection time and the number of unreachable objects.
