--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -695,7 +695,7 @@ mimetypes
 * Add ``application/toml``. (Contributed by Gil Forcada in :gh:`139959`.)
 * Rename ``application/x-texinfo`` to ``application/texinfo``.
   (Contributed by Charlie Lin in :gh:`140165`)
-* Add the following (Contributed by Charlie Lin in :gh:`140393`):
+* Add the following:
    - ``application/efi``
    - ``application/pem-certificate-chain``
    - ``application/pgp-keys``
@@ -707,6 +707,7 @@ mimetypes
    - ``application/mathml+xml``
    - ``application/mbox``
    - ``application/pem-certificate-chain``
+ (Contributed by Charlie Lin in :gh:`140393`)
 
 
 pathlib
