--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -424,6 +424,14 @@ math
   (Contributed by Bénédikt Tran in :gh:`135853`.)
 
 
+mimetypes
+---------
+
+* Add ``application/toml``. (Contributed by Gil Forcada in :gh:`139959`.)
+* Rename ``application/x-texinfo`` to ``application/texinfo``.
+  (Contributed by Charlie Lin in :gh:`140165`)
+
+
 mmap
 ----
 
@@ -593,6 +601,12 @@ types
   as described in :pep:`667`.
 
 
+unicodedata
+-----------
+
+* The Unicode database has been updated to Unicode 17.0.0.
+
+
 unittest
 --------
 
@@ -678,14 +692,6 @@ importlib.resources
   (Contributed by Semyon Moroz in :gh:`138044`)
 
 
-mimetypes
----------
-
-* Add ``application/toml``. (Contributed by Gil Forcada in :gh:`139959`.)
-* Rename ``application/x-texinfo`` to ``application/texinfo``.
-  (Contributed by Charlie Lin in :gh:`140165`)
-
-
 pathlib
 -------
 
@@ -735,7 +741,7 @@ typing
   (Contributed by Bénédikt Tran in :gh:`133817`.)
 
 * Using ``TD = TypedDict("TD")`` or ``TD = TypedDict("TD", None)`` to
-  construct a :class:`~typing.TypedDict` type with zero field is no
+  construct a :class:`~typing.TypedDict` type with zero fields is no
   longer supported. Use ``class TD(TypedDict): pass``
   or ``TD = TypedDict("TD", {})`` instead.
   (Contributed by Bénédikt Tran in :gh:`133823`.)
@@ -765,12 +771,6 @@ typing
   imported or accessed from the :mod:`!typing` module.
 
 
-unicodedata
------------
-
-* The Unicode database has been updated to Unicode 17.0.0.
-
-
 wave
 ----
 
@@ -797,7 +797,7 @@ New deprecations
 * CLI:
 
   * Deprecate :option:`-b` and :option:`!-bb` command-line options
-    and schedule them to become no-op in Python 3.17.
+    and schedule them to become no-ops in Python 3.17.
     These were primarily helpers for the Python 2 -> 3 transition.
     Starting with Python 3.17, no :exc:`BytesWarning` will be raised
     for these cases; use a type checker instead.
@@ -808,8 +808,8 @@ New deprecations
 
   * In hash function constructors such as :func:`~hashlib.new` or the
     direct hash-named constructors such as :func:`~hashlib.md5` and
-    :func:`~hashlib.sha256`, their optional initial data parameter could
-    also be passed a keyword argument named ``data=`` or ``string=`` in
+    :func:`~hashlib.sha256`, the optional initial data parameter could
+    also be passed as a keyword argument named ``data=`` or ``string=`` in
     various :mod:`hashlib` implementations.
 
     Support for the ``string`` keyword argument name is now deprecated and
@@ -903,30 +903,10 @@ New features
 Porting to Python 3.15
 ----------------------
 
-* :class:`sqlite3.Connection` APIs has been cleaned up.
-
-  * All parameters of :func:`sqlite3.connect` except *database* are now keyword-only.
-  * The first three parameters of methods :meth:`~sqlite3.Connection.create_function`
-    and :meth:`~sqlite3.Connection.create_aggregate` are now positional-only.
-  * The first parameter of methods :meth:`~sqlite3.Connection.set_authorizer`,
-    :meth:`~sqlite3.Connection.set_progress_handler` and
-    :meth:`~sqlite3.Connection.set_trace_callback` is now positional-only.
-
-  (Contributed by Serhiy Storchaka in :gh:`133595`.)
-
 * Private functions promoted to public C APIs:
 
   The |pythoncapi_compat_project| can be used to get most of these new
   functions on Python 3.14 and older.
-
-* :data:`resource.RLIM_INFINITY` is now always positive.
-  Passing a negative integer value that corresponded to its old value
-  (such as ``-1`` or ``-3``, depending on platform) to
-  :func:`resource.setrlimit` and :func:`resource.prlimit` is now deprecated.
-  (Contributed by Serhiy Storchaka in :gh:`137044`.)
-
-* :meth:`~mmap.mmap.resize` has been removed on platforms that don't support the
-  underlying syscall, instead of raising a :exc:`SystemError`.
 
 
 Removed C APIs
@@ -1047,3 +1027,23 @@ Porting to Python 3.15
 
 This section lists previously described changes and other bugfixes
 that may require changes to your code.
+
+* :class:`sqlite3.Connection` APIs has been cleaned up.
+
+  * All parameters of :func:`sqlite3.connect` except *database* are now keyword-only.
+  * The first three parameters of methods :meth:`~sqlite3.Connection.create_function`
+    and :meth:`~sqlite3.Connection.create_aggregate` are now positional-only.
+  * The first parameter of methods :meth:`~sqlite3.Connection.set_authorizer`,
+    :meth:`~sqlite3.Connection.set_progress_handler` and
+    :meth:`~sqlite3.Connection.set_trace_callback` is now positional-only.
+
+  (Contributed by Serhiy Storchaka in :gh:`133595`.)
+
+* :data:`resource.RLIM_INFINITY` is now always positive.
+  Passing a negative integer value that corresponded to its old value
+  (such as ``-1`` or ``-3``, depending on platform) to
+  :func:`resource.setrlimit` and :func:`resource.prlimit` is now deprecated.
+  (Contributed by Serhiy Storchaka in :gh:`137044`.)
+
+* :meth:`~mmap.mmap.resize` has been removed on platforms that don't support the
+  underlying syscall, instead of raising a :exc:`SystemError`.
