--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -438,7 +438,7 @@ os
 
 * Add :func:`os.statx` on Linux kernel versions 4.11 and later with
   glibc versions 2.28 and later.
-  (Contributed by Jeffrey Bosboom in :gh:`83714`.)
+  (Contributed by Jeffrey Bosboom and Victor Stinner in :gh:`83714`.)
 
 
 os.path
