Apply suggestions from code review
Co-authored-by: Sergey B Kirpichev <skirpichev@gmail.com>

--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -314,7 +314,8 @@ New modules
 intmath
 -------
 
-This module provides access to the mathematical functions for integer arguments.
+This module provides access to the mathematical functions for integer
+arguments (:pep:`791`).
 (Contributed by Serhiy Storchaka in :gh:`81313`.)
 
 
