intmath -> math.integer

--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -311,8 +311,8 @@ Other language changes
 New modules
 ===========
 
-intmath
--------
+math.integer
+------------
 
 This module provides access to the mathematical functions for integer
 arguments (:pep:`791`).
