--- a/Misc/NEWS.d/next/Tests/2025-10-23-16-39-49.gh-issue-140482.ZMtyeD.rst
+++ b/Misc/NEWS.d/next/Tests/2025-10-23-16-39-49.gh-issue-140482.ZMtyeD.rst
@@ -1,1 +1,1 @@
-Preserve and restore the state of ``stty echo`` as a test environment.
+Preserve and restore the state of ``stty echo`` as part of the test environment.
