--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-24-20-42-33.gh-issue-140551.-9swrl.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-24-20-42-33.gh-issue-140551.-9swrl.rst
@@ -1,2 +1,2 @@
-Fixed crash in ``dict`` if ``clear`` is called at the lookup stage. Patch by
+Fixed crash in :class:`dict` if :meth:`clear` is called at the lookup stage. Patch by
 Mikhail Efimov.
