--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-07-08-00-41-46.gh-issue-136327.7AiTb_.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-07-08-00-41-46.gh-issue-136327.7AiTb_.rst
@@ -1,2 +1,2 @@
 Errors when calling functions with invalid values after ``*`` and ``**`` now do not
-include the function name.
+include the function name. Patch by Ilia Solin.
