--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-24-20-16-42.gh-issue-140517.cqun-K.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-24-20-16-42.gh-issue-140517.cqun-K.rst
@@ -1,4 +1,3 @@
-Fixed a reference leak when iterating over the result of
-:func:`map`. The leak could happen when input ``iterables``
-have different lengths and ``strict`` is ``True``.
+Fixed a reference leak when iterating over the result of :func:`map`
+with ``strict=True`` when the input iterables have different lengths.
 Patch by Mikhail Efimov.
