--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-25-17-36-46.gh-issue-140576.kj0SCY.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-25-17-36-46.gh-issue-140576.kj0SCY.rst
@@ -1,2 +1,2 @@
-Fixed crash produced by incorrect result of c:func:`tokenizeriter_next` in
+Fixed crash produced by incorrect result of :c:func:`tokenizeriter_next` in
 case of error occurred. Patch by Mikhail Efimov.
