--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-24-20-42-33.gh-issue-140551.-9swrl.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-24-20-42-33.gh-issue-140551.-9swrl.rst
@@ -1,2 +1,2 @@
 Fixed crash in :class:`dict` if :meth:`dict.clear` is called at the lookup
-stage. Patch by Mikhail Efimov.
+stage. Patch by Mikhail Efimov and Inada Naoki.
